[gd_scene load_steps=24 format=3 uid="uid://g7y3o2a0jl02"]

[ext_resource type="Script" uid="uid://d2hgvivci8873" path="res://scripts/fish.gd" id="1_nese1"]
[ext_resource type="Texture2D" uid="uid://fjisi3q80i8s" path="res://assets/sprites/Fish/F1/F1IdleRight.png" id="2_nese1"]
[ext_resource type="Texture2D" uid="uid://bcyn082jeb6qv" path="res://assets/sprites/Fish/F1/F1SwimRight.png" id="4_0bj6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a135a"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_udkxk"]
radius = 38.118237

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kku1"]
size = Vector2(18, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pp04"]
atlas = ExtResource("2_nese1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kme0x"]
atlas = ExtResource("2_nese1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x80xi"]
atlas = ExtResource("2_nese1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbd35"]
atlas = ExtResource("2_nese1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oorgb"]
atlas = ExtResource("2_nese1")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81fg0"]
atlas = ExtResource("2_nese1")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3p4v"]
atlas = ExtResource("4_0bj6i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdsqr"]
atlas = ExtResource("4_0bj6i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rfnd"]
atlas = ExtResource("4_0bj6i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d6o1"]
atlas = ExtResource("4_0bj6i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnymj"]
atlas = ExtResource("4_0bj6i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2dhg"]
atlas = ExtResource("4_0bj6i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w11df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pp04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kme0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x80xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbd35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oorgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81fg0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3p4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdsqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rfnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d6o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnymj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2dhg")
}],
"loop": true,
"name": &"Swim",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lwo5c"]
resource_name = "Swim"
length = 0.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Swim"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_31vt4"]
resource_name = "Idle"
length = 0.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_nese1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7wgf"]
_data = {
&"Idle": SubResource("Animation_31vt4"),
&"RESET": SubResource("Animation_nese1"),
&"Swim": SubResource("Animation_lwo5c")
}

[node name="fish" type="CharacterBody2D" groups=["Fish"]]
script = ExtResource("1_nese1")

[node name="BiteRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteRange"]
shape = SubResource("CircleShape2D_a135a")

[node name="InterestRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterestRange"]
shape = SubResource("CircleShape2D_udkxk")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3kku1")

[node name="FishAnim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w11df")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t7wgf")
}

[connection signal="body_entered" from="BiteRange" to="." method="_on_bite_range_body_entered"]
[connection signal="body_exited" from="BiteRange" to="." method="_on_bite_range_body_exited"]
[connection signal="body_entered" from="InterestRange" to="." method="_on_interest_range_body_entered"]
[connection signal="body_exited" from="InterestRange" to="." method="_on_interest_range_body_exited"]
